# ursa

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Jenkinsfile  Jenkinsfile.cd  Jenkinsfile.ci  LICENSE  MAINTAINERS.md  README.md  RELEASES.md  appveyor.yml  azure-pipelines.yml
libhl-crypto/: Cargo.toml
libhl-crypto/amcl/: Cargo.toml
libhl-crypto/amcl/src/: aes.rs  arch.rs  gcm.rs  hash256.rs  hash384.rs  hash512.rs  lib.rs  nhs.rs  rand.rs  sha3.rs
libhl-crypto/debian/: copyright  libindy-crypto-dev.install  libindy-crypto.install
libhl-crypto/docs/: anoncreds-design.md
libhl-crypto/include/: indy_crypto.h  indy_crypto_bls.h  indy_crypto_error.h
libhl-crypto/rustlibsecp256k1/: Cargo.toml
libhl-crypto/src/: lib.rs
libhl-crypto/src/bls/: mod.rs
libhl-crypto/src/cl/: commitment.rs  hash.rs  issuer.rs  logger.rs  mod.rs  prover.rs  verifier.rs
libhl-crypto/src/ffi/: bls.rs  ctypes.rs  logger.rs
libhl-crypto/src/hash/: mod.rs  sha2.rs
libhl-crypto/src/pair/: amcl.rs
libhl-crypto/src/signatures/: mod.rs  secp256k1.rs
libhl-crypto/src/utils/: macros.rs
libhl-crypto/tests/: cl.rs
libindy-crypto/: .gitignore  Cargo.toml  build.rs  changelog
libindy-crypto/ci/: libindy_crypto-deb-build-and-upload.sh  libindy_crypto-win-zip-and-upload.sh  ubuntu.dockerfile
libindy-crypto/debian/: changelog  control  libindy-crypto-dev.install
libindy-crypto/docs/: anoncreds-design.md
libindy-crypto/include/: indy_crypto_bls.h  indy_crypto_cl.h  indy_crypto_error.h
libindy-crypto/src/: lib.rs
libindy-crypto/src/anoncreds/: helpers.rs  issuer.rs  mod.rs  prover.rs  types.rs  verifier.rs
libindy-crypto/src/api/: bls.rs  mod.rs
libindy-crypto/src/bls/: mod.rs
libindy-crypto/src/bn/: openssl.rs
libindy-crypto/src/cl/: commitment.rs  constants.rs  datastructures.rs  helpers.rs  issuer.rs  logger.rs  mod.rs  prover.rs  types.rs  verifier.rs
libindy-crypto/src/errors/: common.rs  indy.rs  mod.rs
libindy-crypto/src/ffi/: anoncreds.rs  bls.rs  issuer.rs  logger.rs  mod.rs  prover.rs
libindy-crypto/src/pair/: amcl.rs  mod.rs
libindy-crypto/src/utils/: byte_array.rs  commitment.rs  ctypes.rs  json.rs  logger.rs  mod.rs  result.rs  rsa.rs
libindy-crypto/src/wasm/: bls.rs  mod.rs
libindy-crypto/tests/: bls.rs  cl.rs
libindy-crypto/tests/utils/: bls.rs  mod.rs
libursa/: Cargo.toml  README.md
libursa/.rpm/: ursa.spec
libursa/benches/: README.md  bench.rs  bls.rs  cks_revok.rs  ed25519.rs  encryption.rs  signatures.rs
libursa/benches/bench_wrappers/: mod.rs  signatures.rs
libursa/ci/: libindy_crypto-win-zip-and-upload.sh
libursa/debian/: control  libindy-crypto-dev.install  libindy-crypto.install
libursa/docs/: anoncreds-design.md
libursa/docs/source/: introduction.rst
libursa/include/: indy_crypto.h  indy_crypto_bls.h  indy_crypto_cl.h  indy_crypto_error.h  ursa_crypto.h  ursa_crypto_ed25519.h  ursa_crypto_encryption.h
libursa/packaging/: publish_to_crates_io.pl
libursa/rustlibsecp256k1/: Cargo.toml
libursa/rustlibsecp256k1/src/: lib.rs
libursa/src/: keys.rs  lib.rs  tibe.rs
libursa/src/bls/: mod.rs
libursa/src/bn/: openssl.rs  rust.rs
libursa/src/cl/: commitment.rs  constants.rs  cs_verifiable_encryption.rs  hash.rs  helpers.rs  issuer.rs  logger.rs  mod.rs  prover.rs  verifier.rs
libursa/src/encoding/: hex.rs
libursa/src/encryption/: mod.rs
libursa/src/errors/: mod.rs
libursa/src/ffi/: bls.rs  ctypes.rs  logger.rs  mod.rs
libursa/src/hash/: blake2.rs  mod.rs  sha2.rs
libursa/src/kex/: mod.rs  secp256k1.rs  x25519.rs
libursa/src/pair/: amcl.rs
libursa/src/sharing/: mod.rs  shamir.rs
libursa/src/signatures/: bls.rs  ed25519.rs  mod.rs  secp256k1.rs
libursa/src/utils/: commitment.rs  ctypes.rs  logger.rs  macros.rs  mod.rs
libursa/src/wasm/: bls.rs  cl.rs  ed25519.rs  encryption.rs  macros.rs  mod.rs  secp256k1.rs  x25519.rs
libursa/tests/: cl.rs  test_bench.rs
libursa/wasm/: gen.pl
libzmix/: Cargo.toml  Jenkinsfile.cd  README.md
libzmix/bbs/: Cargo.toml  README.md
libzmix/bbs/src/: errors.rs  holder.rs  issuer.rs  keys.rs  lib.rs  macros.rs  messages.rs  pok_sig.rs  pok_vc.rs  prover.rs  signature.rs  verifier.rs
libzmix/bbs/tests/: bbs.rs
libzmix/benches/: bbs_vs_ps.rs
libzmix/bulletproofs_amcl/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
libzmix/bulletproofs_amcl/benches/: vec_poly_eval.rs
libzmix/bulletproofs_amcl/src/: errors.rs  ipp.rs  lib.rs  transcript.rs
libzmix/bulletproofs_amcl/tests/: gadget_mimc.rs  multiple_constraint_systems.rs  r1cs.rs
libzmix/delg_cred_cdd/: Cargo.toml  README.md
libzmix/delg_cred_cdd/src/: attribute_token.rs  errors.rs  groth_sig.rs  issuer.rs  lib.rs
libzmix/docs/: VerifiableCredentials.md  zklang_proof_spec.json
libzmix/ps/: Cargo.toml  README.md
libzmix/ps/src/: errors.rs  keys.rs  lib.rs  pok.rs  pok_sig.rs  pok_vc.rs  signature.rs
libzmix/ps/tests/: scenario.rs
libzmix/src/: errors.rs  lib.rs
libzmix/src/commitments/: mod.rs  pedersen_BLS12_381.rs  pok_vc.rs
libzmix/src/hash_functions/: bls12_381_hash.rs  mod.rs
libzmix/src/prf/: mod.rs
libzmix/src/signatures/: mod.rs
libzmix/src/utils/: mod.rs  random.rs
libzmix/src/verifiable_encryption/: cs_verifiable_encryption.rs  mod.rs
libzmix/src/zkl/: mod.rs  spec.rs
libzmix/tests/: ps_sig_complete_scenario.rs  scenario.rs
pairings/: COPYRIGHT  Cargo.toml  README.md
pairings/benches/: pairing_benches.rs
pairings/benches/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  mod.rs
pairings/src/: hash_to_curve.rs  hash_to_field.rs  lib.rs  serdes.rs  signum.rs
r1cs-select/: Cargo.toml  README.md
r1cs-select/src/: circuit.rs  cmdopts.rs  main.rs  r1csbellman.rs  r1csbulletproofs.rs  serde_params.rs
ursa_core/: Cargo.toml
ursa_core/src/: error.rs  keys.rs  lib.rs  macro.rs
ursa_sharing/: Cargo.toml  README.md  run_examples.bat  run_examples.sh
ursa_sharing/examples/: bls12381.rs  bn3072.rs  curve25519.rs  k256.rs  p256.rs
ursa_sharing/src/: error.rs  feldman.rs  lib.rs  pedersen.rs  shamir.rs  tests.rs
(+295 files in other folders)
