[package]
name = "indy-crypto"
version = "0.4.4"
authors = ["Artemkaaas <artem.ivanov@dsr-company.com>"]
description = "This is the shared crypto library for Hyperledger Indy components."
license = "MIT/Apache-2.0"

[lib]
name = "indy_crypto"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "dylib", "cdylib"]

[features]
default = ["bn_openssl", "pair_amcl", "serialization", "ffi", "cl"]
bn_openssl = ["openssl", "int_traits"]
pair_amcl = ["amcl"]
serialization = ["serde", "serde_json", "serde_derive"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]
ffi = []
cl = ["bn_openssl"]

[dependencies]
amcl = { version = "0.1.3",  optional = true, default-features = false, features = ["BN254"]}
int_traits = { version = "0.1.1", optional = true }
libc = "0.2.33"
log = "0.4.1"
# TODO: Find out if the wasm-bindgen feature can be made dependent on our own wasm feature
rand = { version = "0.6.0-pre.1", features = ["wasm-bindgen"] }
sha2 = "0.7.1"
sha3 = "0.7.3"
time = "0.1.36"
env_logger = "0.5.10"
openssl = { version = "0.10.12", optional = true }
serde = { version = "1.0",  optional = true}
serde_json = { version = "1.0",  optional = true}
serde_derive = { version = "1.0",  optional = true}
lazy_static = "1.0"
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.5", optional = true }
