[package]
name = "indy-crypto"
version = "0.1.0"
authors = ["Artemkaaas <artem.ivanov@dsr-company.com>"]
description = "This is the shared crypto libirary for Hyperledger Indy components."
license = "MIT/Apache-2.0"

[lib]
name = "indy_crypto"
path = "src/lib.rs"
crate-type = ["staticlib","rlib", "dylib"]

[features]
default = ["pair_amcl", "serialization"]
pair_amcl = ["amcl"]
serialization = ["serde", "serde_json", "serde_derive"]

[dependencies]
amcl = { version = "0.1.2",  optional = true, features = ["BLS383"]}
log = "0.3.7"
rand = "0.3"
sha1 = "0.2.0"
env_logger = "0.4.3"
serde = { version = "1.0",  optional = true}
serde_json = { version = "1.0",  optional = true}
serde_derive = { version = "1.0",  optional = true}
