[package]
name = "ursa"
version = "0.2.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
description = "This is the shared crypto library for Hyperledger components."
license = "Apache-2.0"
readme =  "../README.md"
repository = "https://github.com/hyperledger/ursa"
documentation = "https://docs.rs/ursa"
homepage = "https://crates.io/crates/ursa"

[lib]
name = "ursa"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[profile.release]
lto = true

[[bin]]
name = "test_secp256k1"
path = "bin/test_secp256k1.rs"
required-features = ["benchmarksecp256k1"]

[[bin]]
name = "test_ed25519"
path = "bin/test_ed25519.rs"
required-features = ["benchmarked25519"]

[features]
default = ["bn_openssl", "pair_amcl", "serialization", "native", "ffi", "cl", "bls"]
portable = ["bn_rust", "pair_amcl", "serialization", "rustlibsecp256k1", "cl", "bls"]
native = ["secp256k1"]
bn_openssl = ["openssl", "int_traits"]
bn_rust = ["num-bigint", "glass_pumpkin", "int_traits", "num-integer", "num-traits"]
pair_amcl = ["amcl"]
serialization = ["serde", "serde_json", "serde_derive"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "portable", "js-sys"]
ffi = ["ffi-support"]
cl = []
bls = []
benchmarksecp256k1 = ["secp256k1", "openssl"]
benchmarked25519 = ["libsodium-ffi"]

[dependencies]
amcl = { version = "0.2",  optional = true, default-features = false, features = ["bn254", "secp256k1"]}
int_traits = { version = "0.1.1", optional = true }
arrayref = "0.3.5"
log = "0.4.1"
failure = "0.1.5"
# TODO: Find out if the wasm-bindgen feature can be made dependent on our own wasm feature
rand = { version = "0.6", features = ["wasm-bindgen"] }
rand_chacha = "0.1"
sha2 = "0.8"
sha3 = "0.8"
blake2 = "0.8"
time = "0.1.36"
env_logger = "0.5.10"
zeroize = "0.5"
ed25519-dalek = "1.0.0-pre.1"
generic-array = "0.12"
openssl = { version = "0.10", optional = true }
serde = { version = "1.0",  optional = true}
serde_json = { version = "1.0",  optional = true}
serde_derive = { version = "1.0",  optional = true}
lazy_static = "1.0"
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
js-sys = { version = "0.3.13", optional = true }
console_error_panic_hook = { version = "0.1.5", optional = true }
secp256k1 = { version = "0.12.0", optional = true, features = ["rand", "serde"]}
libsodium-ffi = { version = "0.1.12", optional = true }
rustlibsecp256k1 = { version = "0.2.2", package = "libsecp256k1", optional = true }
num-bigint = { version = "0.2", features = ["rand"], optional = true }
glass_pumpkin = { version = "0.3", optional = true }
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }
ffi-support = { version = "0.3.4", optional = true }

[dev-dependencies]
openssl = "0.10"
rustlibsecp256k1 = { version = "0.2.2", package = "libsecp256k1" }
libsodium-ffi = "0.1.13"
secp256k1 = "0.12.2"
criterion = "0.2"

[[bench]]
name = "cks_revok"
harness = false

[package.metadata.deb]
maintainer = "Hyperledger"
license-file = ["../LICENSE", "0"]
copyright = "2019, Hyperledger"
depends = "$auto, libssl1.0.0"
extended-description = """\
Rust written reliable, secure, easy-to-use, and pluggable cryptographic implementations."""
section = "admin"
revision = "1"
priority = "optional"
assets = [
    ["../target/release/libursa.a", "usr/lib/ursa/libursa.a", "644"],
    ["../target/release/libursa.so", "usr/lib/ursa/libursa.so", "644"],
    ["include/ursa_crypto.h", "usr/include/ursa/ursa_crypto.h", "644"],
    ["include/ursa_crypto_ed25519.h", "usr/include/ursa/ursa_crypto_ed25519.h", "644"]
]

[package.metadata.rpm]
maintainer = "Hyperledger"
license-file = ["../LICENSE", "0"]
copyright = "2018, Hyperledger"
depends = "$auto"
extended-description = """\
Rust written reliable, secure, easy-to-use, and pluggable cryptographic implementations."""
section = "admin"
revision = "1"
priority = "optional"
