[package]
name = "zmix"
version = "0.1.0"
authors = ["The Hyperledger Ursa Contributors"]
license = "Apache-2.0"

[lib]
name = "zmix"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["bbs", "ver_enc", "PS_Signature_G2"]
bbs = []
ver_enc = []
PS_Signature_G2 = []
PS_Signature_G1 = []

[dependencies]
rand = "0.7.0"
serde_json = "1.0"
serde = { version = "1.0.99", features = ["derive"] }
failure = "0.1.5"
zeroize = "0.9"
lazy_static = "1.3"
sha2 = "0.8"
ursa = { path = "../libursa" }
criterion = "0.3.0"

[[bench]]
name = "bbs_vs_ps"
harness = false

[dev-dependencies]
rand_chacha = "0.2.0"
serde_json = "1.0.40"

[dependencies.amcl_wrapper]
version = "0.1.6"
default-features = false
features = ["bls381"]
