[package]
name = "zmix"
version = "0.2.0"
authors = ["The Hyperledger Ursa Contributors"]
license = "Apache-2.0"

[lib]
name = "zmix"
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["std", "ursa/default"]
portable = ["std", "ursa/portable"]
asm = ["std", "sha2/asm", "ursa/asm"]
std = ["bbs", "ver_enc", "PS_Signature_G2", "sha2/std"]
bbs = []
ver_enc = []
PS_Signature_G2 = []
PS_Signature_G1 = []

[dependencies]
rand = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
zeroize = { version = "1.0", features = ["zeroize_derive"] }
lazy_static = "1.4"
sha2 = { version = "0.8", default-features = false, optional = true }
ursa = { version = "0.2", path = "../libursa", default-features = false, optional = true }
criterion = "0.3"

[[bench]]
name = "bbs_vs_ps"
harness = false

[dev-dependencies]
rand_chacha = "0.2"
serde_json = "1.0"

[dependencies.amcl_wrapper]
version = "0.2.3"
default-features = false
features = ["bls381"]
