[package]
name = "r1cs-select"
version = "0.1.0"
authors = ["Michael Lodder <redmike7@gmail.com>"]
edition = "2018"

[dependencies]
bellman = "0.10"
bls12_381 = "0.5"
bulletproofs = { version = "4.0", features = ["yoloproofs"] }
curve25519-dalek-ng = "4.0"
ff = "0.10"
hex = "0.4"
merlin = "3.0"
num-bigint = "0.4"
rand = "0.8"
r1cs = "0.4"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
