[package]
authors = ["The Hyperledger Ursa Contributors"]
description = "Core functionality shared across all ursa components"
documentation = "https://docs.rs/ursa_core"
edition = "2021"
license = "Apache-2.0"
name = "ursa_core"
readme = "../README.md"
version = "0.5.0"

[dependencies]
anyhow = "1.0"
core2 = "0.4"
serde = "1.0"
serde_bare = "0.5"
serde_cbor = "0.11"
serde_json = "1.0"
string-error = "0.1"
thiserror = "1.0"
