[package]
authors = ["The Hyperledger Ursa Contributors"]
description = "The BBS+ signature scheme"
documentation = "https://docs.rs/bbs"
edition = "2018"
license = "Apache-2.0"
name = "bbs"
readme = "README.md"
repository = "https://github.com/hyperledger/ursa"
version = "0.3.0"

[badges]
maintenance = { status = "active" }

[dependencies]
amcl_wrapper = { version = "0.5", default-features = false, features = ["bls381"], package = "amcl_wrapper_ml" }
arrayref = "0.3"
failure = "0.1"
hash2curve = { version = "0.0.6", features = ["bls"] }
hkdf = "0.8.0"
rayon = "1.3.0"
rand = "0.7.3"
sha2 = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }

[dev-dependencies]
hex = "0.4.2"
