[package]
authors = ["The Hyperledger Ursa Contributors"]
description = "The BBS+ signature scheme"
documentation = "https://docs.rs/bbs"
edition = "2018"
license = "Apache-2.0"
name = "bbs"
readme = "README.md"
repository = "https://github.com/hyperledger/ursa"
version = "0.4.0"

[badges]
maintenance = { status = "active" }

[features]
default = ["rayon"]

[dependencies]
arrayref = "0.3"
blake2 = "0.8"
failure = "0.1"
ff-zeroize = "0.6"
hex = "0.4"
hkdf = "0.8"
rayon = { version = "1.3", optional = true }
rand = "0.7"
pairing-plus = "0.19"
serde = { version = "1.0", features = ["serde_derive"] }
zeroize = "1.1"

[dev-dependencies]
