[package]
name = "bulletproofs_amcl"
version = "0.1.0"
authors = ["lovesh harchandani <lovesh.bond@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
lazy_static = "1.3.0"
merlin = "1"
byteorder = "1.3.1"

[dependencies.amcl_wrapper]
git = "https://github.com/lovesh/amcl_rust_wrapper"
branch = "master"
features = ["bls381"]

[dev-dependencies]
#flame = "*"
#cpuprofiler = "0.0.3"
