[package]
name = "bulletproofs_amcl"
version = "0.2.0"
authors = ["Hyperledger Ursa Maintainers"]
edition = "2018"

[dependencies]
rand = "0.7"
lazy_static = "1.3.0"
merlin = "1"
byteorder = "1.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
criterion = "0.3"
failure = "0.1"

[dependencies.amcl_wrapper]
version = "0.3.5"
default-features = false
features = ["bls381"]

[features]
default = ["bls381"]
bls381 = ["amcl_wrapper/bls381"]
bn254 = ["amcl_wrapper/bn254"]
secp256k1 = ["amcl_wrapper/secp256k1"]
ed25519 = ["amcl_wrapper/ed25519"]

[[bench]]
name = "vec_poly_eval"
harness = false