[package]
name = "delg_cred_cdd"
version = "0.1.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
log = "*"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.amcl_wrapper]
version = "0.1.5"
default-features = false
features = ["bls381"]